# wiki-rag-pipeline

./: .gitignore  README.md  pyproject.toml  sample_queries.md
src/: app.py  config.py  evaluate.py  generate.py  ingest.py  pipeline.py  retrieval.py
